// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when validating association property is missing metaEdId should have validation failures 1`] = `"Association Property AssociationName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating association property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 16,
  "line": 5,
  "tokenText": "AssociationName",
}
`;

exports[`when validating choice property is missing metaEdId should have validation failures 1`] = `"Choice Property ChoiceName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating choice property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 11,
  "line": 5,
  "tokenText": "ChoiceName",
}
`;

exports[`when validating common property is missing metaEdId should have validation failures 1`] = `"Common Property CommonName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating common property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 11,
  "line": 5,
  "tokenText": "CommonName",
}
`;

exports[`when validating currency property is missing metaEdId should have validation failures 1`] = `"Currency Property CurrencyName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating currency property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 13,
  "line": 5,
  "tokenText": "CurrencyName",
}
`;

exports[`when validating date property is missing metaEdId should have validation failures 1`] = `"Date Property DateName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating date property is missing metaEdId should have validation failures: when validating date property is missing metaEdId should have validation failures -> sourceMap 1`] = `
Object {
  "column": 9,
  "line": 5,
  "tokenText": "DateName",
}
`;

exports[`when validating datetime property is missing metaEdId should have validation failures 1`] = `"Datetime Property DatetimeName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating datetime property is missing metaEdId should have validation failures: when validating datetime property is missing metaEdId should have validation failures -> sourceMap 1`] = `
Object {
  "column": 13,
  "line": 5,
  "tokenText": "DatetimeName",
}
`;

exports[`when validating decimal property is missing metaEdId should have validation failures 1`] = `"Decimal Property DecimalName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating decimal property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 12,
  "line": 5,
  "tokenText": "DecimalName",
}
`;

exports[`when validating descriptor property is missing metaEdId should have validation failures 1`] = `"Descriptor Property DescriptorName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating descriptor property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 15,
  "line": 5,
  "tokenText": "DescriptorName",
}
`;

exports[`when validating domainEntity property is missing metaEdId should have validation failures 1`] = `"Domain Entity Property DomainEntityName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating domainEntity property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 18,
  "line": 5,
  "tokenText": "DomainEntityName",
}
`;

exports[`when validating duration property is missing metaEdId should have validation failures 1`] = `"Duration Property DurationName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating duration property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 13,
  "line": 5,
  "tokenText": "DurationName",
}
`;

exports[`when validating enumeration property is missing metaEdId should have validation failures 1`] = `"Enumeration Property EnumerationName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating enumeration property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 16,
  "line": 5,
  "tokenText": "EnumerationName",
}
`;

exports[`when validating first domain entity property is missing metaEdId should have validation failures 1`] = `"Domain Entity Property FirstAssociationDomainEntityProperty on Association AssociationName is missing a MetaEdId value."`;

exports[`when validating first domain entity property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 18,
  "line": 5,
  "tokenText": "FirstAssociationDomainEntityProperty",
}
`;

exports[`when validating inline common property is missing metaEdId should have validation failures 1`] = `"Inline Common Property InlineCommonName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating inline common property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 18,
  "line": 5,
  "tokenText": "InlineCommonName",
}
`;

exports[`when validating integer property is missing metaEdId should have validation failures 1`] = `"Integer Property IntegerName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating integer property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 12,
  "line": 5,
  "tokenText": "IntegerName",
}
`;

exports[`when validating percent property is missing metaEdId should have validation failures 1`] = `"Percent Property PercentName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating percent property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 12,
  "line": 5,
  "tokenText": "PercentName",
}
`;

exports[`when validating school year enumeration property is missing metaEdId should have validation failures 1`] = `"Enumeration Property SchoolYear on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating school year enumeration property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 16,
  "line": 5,
  "tokenText": "SchoolYear",
}
`;

exports[`when validating second domain entity property is missing metaEdId should have validation failures 1`] = `"Domain Entity Property SecondAssociationDomainEntityProperty on Association AssociationName is missing a MetaEdId value."`;

exports[`when validating second domain entity property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 18,
  "line": 8,
  "tokenText": "SecondAssociationDomainEntityProperty",
}
`;

exports[`when validating shared decimal property is missing metaEdId should have validation failures 1`] = `"Shared Decimal Property SharedDecimalName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating shared decimal property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 19,
  "line": 5,
  "tokenText": "SharedDecimalName",
}
`;

exports[`when validating shared integer property is missing metaEdId should have validation failures 1`] = `"Shared Integer Property SharedIntegerName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating shared integer property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 19,
  "line": 5,
  "tokenText": "SharedIntegerName",
}
`;

exports[`when validating shared short property is missing metaEdId should have validation failures 1`] = `"Shared Short Property SharedShortName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating shared short property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 17,
  "line": 5,
  "tokenText": "SharedShortName",
}
`;

exports[`when validating shared string property is missing metaEdId should have validation failures 1`] = `"Shared String Property SharedStringName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating shared string property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 18,
  "line": 5,
  "tokenText": "SharedStringName",
}
`;

exports[`when validating short property is missing metaEdId should have validation failures 1`] = `"Short Property ShortName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating short property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 10,
  "line": 5,
  "tokenText": "ShortName",
}
`;

exports[`when validating string property is missing metaEdId should have validation failures 1`] = `"String Property StringName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating string property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 11,
  "line": 5,
  "tokenText": "StringName",
}
`;

exports[`when validating time property is missing metaEdId should have validation failures 1`] = `"Time Property TimeName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating time property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 9,
  "line": 5,
  "tokenText": "TimeName",
}
`;

exports[`when validating year property is missing metaEdId should have validation failures 1`] = `"Year Property YearName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating year property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 9,
  "line": 5,
  "tokenText": "YearName",
}
`;
